force-app/main/default/objects/CCR_DeviceError__c/CCR_DeviceError__c.object-meta.xml
<CustomObject>
    <label>Device Error</label>
    <nameField>
        <displayFormat>DE-{0000000}</displayFormat>
        <label>Device Error #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Device Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>