force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_ClassName__c.field-meta.xml
<CustomField>
    <fullName>CCR_ClassName__c</fullName>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>