force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_Codentify__c.field-meta.xml
<CustomField>
    <fullName>CCR_Codentify__c</fullName>
    <label>Codentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>