force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_Contact_SPICE_ID__c.field-meta.xml
<CustomField>
    <fullName>CCR_Contact_SPICE_ID__c</fullName>
    <label>Contact SPICE ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>