force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CCR_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>