force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_IntegrationUser__c.field-meta.xml
<CustomField>
    <fullName>CCR_IntegrationUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used By:CCR
Description: Lookup to User who created API call</description>
    <label>Integration User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Device_Errors</relationshipName>
    <type>Lookup</type>
</CustomField>