force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_MethodName__c.field-meta.xml
<CustomField>
    <fullName>CCR_MethodName__c</fullName>
    <label>Method Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>