force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_NewDeviceCodentify__c.field-meta.xml
<CustomField>
    <fullName>CCR_NewDeviceCodentify__c</fullName>
    <label>New Device Codentify</label>
    <length>20</length>
    <type>Text</type>
</CustomField>