force-app/main/default/objects/CCR_DeviceError__c/fields/CCR_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>CCR_Request_JSON__c</fullName>
    <label>Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>